--- a/primeiraAPI/package.json
+++ b/primeiraAPI/package.json
@@ -8,10 +8,11 @@
   },
   "dependencies": {
     "@types/express": "^4.17.17",
-    "class-transformer": "^0.5.1",
+    "class-transformer": "^0.5.1",    
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "nodemon": "^2.0.20",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   }
