--- a/primeiraAPI/package.json
+++ b/primeiraAPI/package.json
@@ -1,18 +1,30 @@
 {
   "name": "primeiraAPI",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.ts",
   "license": "MIT",
-  "scripts": {
-    "dev": "ts-node-dev src/server.ts"
-  },
   "dependencies": {
-    "@types/express": "^4.17.17",
-    "class-transformer": "^0.5.1",    
-    "express": "^4.18.2"
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/uuid": "^9.0.1",
+    "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "express": "^4.17.3",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.0",
+    "pg": "^8.10.0",
+    "reflect-metadata": "^0.1.10",
+    "typeorm": "0.2.28",
+    "@types/cors": "^2.8.12",
+    "cors": "^2.8.5",
+    "uuid": "^9.0.0"
+  },
+  "scripts": {
+    "dev": "ts-node-dev src/server.ts",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   }
